Passing all feature tests, started creating model

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
 </body>
 <h1> Welcome to the Quiz! </h1>
 <h2> Do you want to attempt the first devilish question? </h2>
-<form action='/first_question' method='get'>
+<form action='/question' method='get'>
   <input type='submit' value='Yes!' />
 </form>
 <body>
