--- a/views/question.erb
+++ b/views/question.erb
@@ -5,8 +5,8 @@
 <h1> Welcome to the Quiz! </h1>
 <h2> Here is your first devilish question: </h2>
 <p> How many holes does a polo have? </p>
-<form action='/first_question' method='get'>
+<form action='/answer' method='post'>
   <input type="text" name="answer" />
-  <input type='submit' value='Yes!' />
+  <input type='submit' value='Answer!' />
 </form>
 <body>
