--- a/views/index.erb
+++ b/views/index.erb
@@ -5,6 +5,8 @@
 <h1> Welcome to the Quiz! </h1>
 <h2> Do you want to attempt the first devilish question? </h2>
 <form action='/question' method='get'>
-  <input type='submit' value='Yes!' />
+  <p>Enter your name if you want a place on the leaderboard (TBC).</p>
+  <input type='text' name='player_name'/>
+  <input type='submit' value='Play!' />
 </form>
 <body>
