--- a/views/index.erb
+++ b/views/index.erb
@@ -1,12 +1,12 @@
 <head>
 </head>
 
-</body>
+<body>
 <h1> Welcome to the Quiz! </h1>
 <h2> Do you want to attempt the first devilish question? </h2>
-<form action='/question' method='get'>
+<form action='/initialize_game' method='post'>
   <p>Enter your name if you want a place on the leaderboard (TBC).</p>
   <input type='text' name='player_name'/>
   <input type='submit' value='Play!' />
 </form>
-<body>
+</body>
