--- a/views/out_of_questions.erb
+++ b/views/out_of_questions.erb
@@ -8,4 +8,9 @@
 <form action='/' method='get'>
   <input type='submit' value='Play!' />
 </form>
+
+<h2> Press this button to see the leaderboard: </h2>
+<form action='/leaderboard' method='get'>
+  <input type='submit' value='See leaderboard' />
+</form>
 </body>
