Slight refactoring, added tweet parsing script

--- a/views/game_over.erb
+++ b/views/game_over.erb
@@ -2,7 +2,7 @@
 </head>
 
 <body>
-<h1> Unlucky, <%= @game.player.name %>, that was wrong.</h1>
+<h1> Unlucky, <%= @game.player.name %>, you're out of lives.</h1>
 <h2> You scored: <%= @game.player.score %>!</h2>
 <h2> Press this button to play again: </h2>
 <form action='/' method='get'>
