Second draft of README and wrote final feature test

--- a/views/index.erb
+++ b/views/index.erb
@@ -9,4 +9,9 @@
   <input type='text' name='player_name'/>
   <input type='submit' value='Play!' />
 </form>
+
+<form action='/leaderboard' method='post'>
+  <p>Or, click here if you want to see the leaderboard.</p>
+  <input type='submit' value='Leaderboard' />
+</form>
 </body>
