Reworded index.erb

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
 
 <body>
 <h1> Welcome to the Quiz! </h1>
-<h2> Do you want to attempt the first devilish question? </h2>
+<h2> Now with over two thousand questions! </h2>
 <form action='/initialize_game' method='post'>
   <p>Enter your name if you want a place on the leaderboard (TBC).</p>
   <input type='text' name='player_name'/>
